null pointer exception in drm_ode_is_420_only
Using next/master, on HDMI cable unplug I got the backtrace:
[ 79.835332] Mem abort info:
[ 79.838894] ESR = 0x0000000096000004
[ 79.843477] EC = 0x25: DABT (current EL), IL = 32 bits
[ 79.850058] SET = 0, FnV = 0
[ 79.853657] EA = 0, S1PTW = 0
[ 79.857510] FSC = 0x04: level 0 translation fault
[ 79.863173] Data abort info:
[ 79.866606] ISV = 0, ISS = 0x00000004, ISS2 = 0x00000000
[ 79.872828] CM = 0, WnR = 0, TnD = 0, TagAccess = 0
[ 79.878479] GCS = 0, Overlay = 0, DirtyBit = 0, Xs = 0
[ 79.884376] user pgtable: 4k pages, 48-bit VAs, pgdp=0000000128ea5000
[ 79.891519] [0000000000000178] pgd=0000000000000000, p4d=0000000000000000
[ 79.899259] Internal error: Oops: 0000000096000004 [#1] PREEMPT SMP
[ 79.899273] Modules linked in: lontium_lt9611uxc display_connector
[ 79.899291] CPU: 0 UID: 0 PID: 183 Comm: kworker/0:4 Not tainted 6.10.0-next-20240717-g51b33e8c7d01 #2706
[ 79.899305] Hardware name: Qualcomm Technologies, Inc. SM8350 HDK (DT)
[ 79.899314] Workqueue: events lt9611uxc_hpd_work [lontium_lt9611uxc]
[ 79.899340] pstate: 60400005 (nZCv daif +PAN -UAO -TCO -DIT -SSBS BTYPE=--)
[ 79.899351] pc : drm_mode_is_420_only+0x24/0x40
[ 79.899367] lr : drm_mode_is_420_only+0x20/0x40
[ 79.899377] sp : ffff800082f0b830
[ 79.899382] x29: ffff800082f0b830 x28: 0000000000000001 x27: ffff76c59b84d8b0
[ 79.899398] x26: ffffc074f42669d8 x25: ffffc074f4820528 x24: 0000000000000028
[ 79.899413] x23: ffff76c58c8e6c80 x22: ffffc074f5fe5000 x21: ffff76c59b300080
[ 79.899426] x20: ffffc074f505fce0 x19: 0000000000000178 x18: 0000000000000000
[ 79.899439] x17: 0000000000000000 x16: 000000000000005b x15: 0000000000000000
[ 79.899452] x14: 0000000000040000 x13: 0000000000000000 x12: 0000000000000000
[ 79.899465] x11: 00000000000001e0 x10: 0000000000000000 x9 : ffffc074f5c0ff30
[ 79.899478] x8 : ffff800082f0b828 x7 : 0000000000000000 x6 : 07d8078000024414
[ 79.899491] x5 : 0000000000000005 x4 : ffff76c58c8e7198 x3 : 0000000000000000
[ 79.899504] x2 : 0000000000000000 x1 : 0000000000000000 x0 : 0000000000000010
[ 79.899517] Call trace:
[ 79.899521] drm_mode_is_420_only+0x24/0x40
[ 79.899531] dpu_encoder_get_drm_fmt+0x20/0x44
[ 79.899544] dpu_encoder_phys_vid_enable+0x24/0x1f8
[ 79.899555] dpu_encoder_virt_atomic_enable+0xd4/0x234
[ 79.899565] drm_atomic_helper_commit_modeset_enables+0x188/0x26c
[ 79.899577] msm_atomic_commit_tail+0x1d8/0x688
[ 79.899592] commit_tail+0xa0/0x188
[ 79.899602] drm_atomic_helper_commit+0x190/0x1a4
[ 79.899612] drm_atomic_commit+0xb4/0xec
[ 79.899624] drm_client_modeset_commit_atomic+0x240/0x2ac
[ 79.899636] drm_client_modeset_commit_locked+0x60/0x1b4
[ 79.899648] drm_client_modeset_commit+0x30/0x58
[ 79.899658] __drm_fb_helper_restore_fbdev_mode_unlocked+0xb0/0xf0
[ 79.899671] drm_fb_helper_hotplug_event+0xf4/0x104
[ 79.899680] msm_fbdev_client_hotplug+0x28/0xd4
[ 79.899693] drm_client_dev_hotplug+0xcc/0x130
[ 79.899703] drm_kms_helper_connector_hotplug_event+0x34/0x44
[ 79.899717] drm_bridge_connector_hpd_cb+0x8c/0xa4
[ 79.899727] drm_bridge_hpd_notify+0x40/0x5c
[ 79.899737] lt9611uxc_hpd_work+0x6c/0x80 [lontium_lt9611uxc]
[ 79.899749] process_one_work+0x20c/0x62c
[ 79.899764] worker_thread+0x1bc/0x36c
[ 79.899773] kthread+0x120/0x124
[ 79.899785] ret_from_fork+0x10/0x20
[ 79.899803] Code: 91010273 aa0103e0 97ffad17 d3461c01 (f8617a61)
[ 80.160756] ---[ end trace 0000000000000000 ]---